--- a/api-aposta/src/main/resources/application.properties
+++ b/api-aposta/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=aposta
-spring.r2dbc.url=r2dbc:postgresql://localhost:5432/app-reactive-aposta
-spring.r2dbc.username=docker
-spring.r2dbc.password=docker
+spring.application.name=evento
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/app-reactive-evento
+spring.r2dbc.username=
+spring.r2dbc.password=
 
-spring.flyway.url=jdbc:postgresql://localhost:5432/app-reactive-aposta
-spring.flyway.user=docker
-spring.flyway.password=docker
+spring.flyway.url=jdbc:postgresql://localhost:5432/app-reactive-evento
+spring.flyway.user=
+spring.flyway.password=
